# web-monitoring-crawler

./: .editorconfig  .gitignore  Dockerfile.browsertrix  README.md  crawl-lib.sh  crawl.sh  pyproject.toml  test.crawl.yaml
.github/: dependabot.yml
.github/workflows/: crawl.yml  reimport-to-db.yml  reupload-to-ia.yml
src/edgi_wm_crawler/: __init__.py  seeds.py
